crates/cronet-sys/include/cronet_rs_dev.h

typedef const char* Cronet_String;
typedef void* Cronet_RawDataPtr;
typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;
typedef struct Cronet_UrlRequestParams* Cronet_UrlRequestParamsPtr;
typedef struct Cronet_Executor* Cronet_ExecutorPtr;
typedef struct Cronet_HttpHeader* Cronet_HttpHeaderPtr;
typedef struct Cronet_UploadDataProvider* Cronet_UploadDataProviderPtr;
typedef struct Cronet_UrlResponseInfo* Cronet_UrlResponseInfoPtr;
typedef struct Cronet_QuicHint* Cronet_QuicHintPtr;
typedef struct Cronet_PublicKeyPins* Cronet_PublicKeyPinsPtr;
typedef enum Cronet_EngineParams_HTTP_CACHE_MODE {
  Cronet_EngineParams_HTTP_CACHE_MODE_DISABLED = 0,
  Cronet_EngineParams_HTTP_CACHE_MODE_IN_MEMORY = 1,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK_NO_HTTP = 2,
  Cronet_EngineParams_HTTP_CACHE_MODE_DISK = 3
} Cronet_EngineParams_HTTP_CACHE_MODE;
typedef enum Cronet_UrlRequestParams_REQUEST_PRIORITY {
  Cronet_UrlRequestParams_REQUEST_PRIORITY_IDLE = 0,
  Cronet_UrlRequestParams_REQUEST_PRIORITY_LOWEST = 1,
  Cronet_UrlRequestParams_REQUEST_PRIORITY_LOW = 2,
  Cronet_UrlRequestParams_REQUEST_PRIORITY_MEDIUM = 3,
  Cronet_UrlRequestParams_REQUEST_PRIORITY_HIGHEST = 4
} Cronet_UrlRequestParams_REQUEST_PRIORITY;
void Cronet_EngineParams_enable_quic_set(Cronet_EngineParamsPtr, bool);
void Cronet_EngineParams_enable_http2_set(Cronet_EngineParamsPtr, bool);
void Cronet_EngineParams_enable_brotli_set(Cronet_EngineParamsPtr, bool);
void Cronet_EngineParams_http_cache_mode_set(Cronet_EngineParamsPtr, Cronet_EngineParams_HTTP_CACHE_MODE);
void Cronet_EngineParams_http_cache_max_size_set(Cronet_EngineParamsPtr, int64_t);
void Cronet_EngineParams_experimental_options_set(Cronet_EngineParamsPtr, Cronet_String);
Cronet_String Cronet_EngineParams_experimental_options_get(Cronet_EngineParamsPtr);
void Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set(
    Cronet_EngineParamsPtr, bool);
void Cronet_EngineParams_network_thread_priority_set(Cronet_EngineParamsPtr, double);
void Cronet_EngineParams_quic_hints_add(Cronet_EngineParamsPtr, Cronet_QuicHintPtr);
void Cronet_EngineParams_public_key_pins_add(Cronet_EngineParamsPtr, Cronet_PublicKeyPinsPtr);
Cronet_UrlRequestParamsPtr Cronet_UrlRequestParams_Create(void);
void Cronet_UrlRequestParams_Destroy(Cronet_UrlRequestParamsPtr);
void Cronet_UrlRequestParams_http_method_set(Cronet_UrlRequestParamsPtr, Cronet_String);
void Cronet_UrlRequestParams_disable_cache_set(Cronet_UrlRequestParamsPtr, bool);
void Cronet_UrlRequestParams_priority_set(Cronet_UrlRequestParamsPtr, Cronet_UrlRequestParams_REQUEST_PRIORITY);
void Cronet_UrlRequestParams_allow_direct_executor_set(Cronet_UrlRequestParamsPtr, bool);
void Cronet_UrlRequestParams_request_headers_add(Cronet_UrlRequestParamsPtr, Cronet_HttpHeaderPtr);
void Cronet_UrlRequestParams_upload_data_provider_set(Cronet_UrlRequestParamsPtr, Cronet_UploadDataProviderPtr);
void Cronet_UrlRequestParams_upload_data_provider_executor_set(Cronet_UrlRequestParamsPtr, Cronet_ExecutorPtr);
Cronet_HttpHeaderPtr Cronet_HttpHeader_Create(void);
void Cronet_HttpHeader_Destroy(Cronet_HttpHeaderPtr);
void Cronet_HttpHeader_name_set(Cronet_HttpHeaderPtr, Cronet_String);
void Cronet_HttpHeader_value_set(Cronet_HttpHeaderPtr, Cronet_String);
Cronet_String Cronet_HttpHeader_name_get(Cronet_HttpHeaderPtr);
Cronet_String Cronet_HttpHeader_value_get(Cronet_HttpHeaderPtr);
Cronet_String Cronet_UrlResponseInfo_url_get(Cronet_UrlResponseInfoPtr);
uint32_t Cronet_UrlResponseInfo_url_chain_size(Cronet_UrlResponseInfoPtr);
Cronet_String Cronet_UrlResponseInfo_url_chain_at(Cronet_UrlResponseInfoPtr, uint32_t);
int32_t Cronet_UrlResponseInfo_http_status_code_get(Cronet_UrlResponseInfoPtr);
Cronet_String Cronet_UrlResponseInfo_http_status_text_get(Cronet_UrlResponseInfoPtr);
uint32_t Cronet_UrlResponseInfo_all_headers_list_size(Cronet_UrlResponseInfoPtr);
Cronet_HttpHeaderPtr Cronet_UrlResponseInfo_all_headers_list_at(Cronet_UrlResponseInfoPtr, uint32_t);
bool Cronet_UrlResponseInfo_was_cached_get(Cronet_UrlResponseInfoPtr);
Cronet_String Cronet_UrlResponseInfo_negotiated_protocol_get(Cronet_UrlResponseInfoPtr);
Cronet_String Cronet_UrlResponseInfo_proxy_server_get(Cronet_UrlResponseInfoPtr);
int64_t Cronet_UrlResponseInfo_received_byte_count_get(Cronet_UrlResponseInfoPtr);