crates/cronet-sys/src/bindings_pinned.rs

unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_quic_set(self_: Cronet_EngineParamsPtr, enable_quic: bool);
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_http2_set(self_: Cronet_EngineParamsPtr, enable_http2: bool);
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_brotli_set(
        self_: Cronet_EngineParamsPtr,
        enable_brotli: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_http_cache_mode_set(
        self_: Cronet_EngineParamsPtr,
        http_cache_mode: Cronet_EngineParams_HTTP_CACHE_MODE,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_http_cache_max_size_set(
        self_: Cronet_EngineParamsPtr,
        http_cache_max_size: i64,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_quic_hints_add(
        self_: Cronet_EngineParamsPtr,
        element: Cronet_QuicHintPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_add(
        self_: Cronet_EngineParamsPtr,
        element: Cronet_PublicKeyPinsPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_set(
        self_: Cronet_EngineParamsPtr,
        enable_public_key_pinning_bypass_for_local_trust_anchors: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_network_thread_priority_set(
        self_: Cronet_EngineParamsPtr,
        network_thread_priority: f64,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_experimental_options_set(
        self_: Cronet_EngineParamsPtr,
        experimental_options: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_check_result_get(self_: Cronet_EngineParamsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_user_agent_get(self_: Cronet_EngineParamsPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_accept_language_get(self_: Cronet_EngineParamsPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_storage_path_get(self_: Cronet_EngineParamsPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_quic_get(self_: Cronet_EngineParamsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_http2_get(self_: Cronet_EngineParamsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_brotli_get(self_: Cronet_EngineParamsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_http_cache_mode_get(
        self_: Cronet_EngineParamsPtr,
    ) -> Cronet_EngineParams_HTTP_CACHE_MODE;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_http_cache_max_size_get(self_: Cronet_EngineParamsPtr) -> i64;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_quic_hints_size(self_: Cronet_EngineParamsPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_quic_hints_at(
        self_: Cronet_EngineParamsPtr,
        index: u32,
    ) -> Cronet_QuicHintPtr;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_quic_hints_clear(self_: Cronet_EngineParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_size(self_: Cronet_EngineParamsPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_at(
        self_: Cronet_EngineParamsPtr,
        index: u32,
    ) -> Cronet_PublicKeyPinsPtr;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_public_key_pins_clear(self_: Cronet_EngineParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_enable_public_key_pinning_bypass_for_local_trust_anchors_get(
        self_: Cronet_EngineParamsPtr,
    ) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_network_thread_priority_get(self_: Cronet_EngineParamsPtr) -> f64;
}
unsafe extern "C" {
    pub fn Cronet_EngineParams_experimental_options_get(
        self_: Cronet_EngineParamsPtr,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_Create() -> Cronet_HttpHeaderPtr;
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_Destroy(self_: Cronet_HttpHeaderPtr);
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_name_set(self_: Cronet_HttpHeaderPtr, name: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_value_set(self_: Cronet_HttpHeaderPtr, value: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_name_get(self_: Cronet_HttpHeaderPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_HttpHeader_value_get(self_: Cronet_HttpHeaderPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_Create() -> Cronet_UrlResponseInfoPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_Destroy(self_: Cronet_UrlResponseInfoPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_set(self_: Cronet_UrlResponseInfoPtr, url: Cronet_String);
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_add(
        self_: Cronet_UrlResponseInfoPtr,
        element: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_code_set(
        self_: Cronet_UrlResponseInfoPtr,
        http_status_code: i32,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_text_set(
        self_: Cronet_UrlResponseInfoPtr,
        http_status_text: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_add(
        self_: Cronet_UrlResponseInfoPtr,
        element: Cronet_HttpHeaderPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_was_cached_set(
        self_: Cronet_UrlResponseInfoPtr,
        was_cached: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_negotiated_protocol_set(
        self_: Cronet_UrlResponseInfoPtr,
        negotiated_protocol: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_proxy_server_set(
        self_: Cronet_UrlResponseInfoPtr,
        proxy_server: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_received_byte_count_set(
        self_: Cronet_UrlResponseInfoPtr,
        received_byte_count: i64,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_get(self_: Cronet_UrlResponseInfoPtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_size(self_: Cronet_UrlResponseInfoPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_at(
        self_: Cronet_UrlResponseInfoPtr,
        index: u32,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_url_chain_clear(self_: Cronet_UrlResponseInfoPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_code_get(self_: Cronet_UrlResponseInfoPtr) -> i32;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_http_status_text_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_size(self_: Cronet_UrlResponseInfoPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_at(
        self_: Cronet_UrlResponseInfoPtr,
        index: u32,
    ) -> Cronet_HttpHeaderPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_all_headers_list_clear(self_: Cronet_UrlResponseInfoPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_was_cached_get(self_: Cronet_UrlResponseInfoPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_negotiated_protocol_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_proxy_server_get(
        self_: Cronet_UrlResponseInfoPtr,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlResponseInfo_received_byte_count_get(self_: Cronet_UrlResponseInfoPtr) -> i64;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_Create() -> Cronet_UrlRequestParamsPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_Destroy(self_: Cronet_UrlRequestParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_http_method_set(
        self_: Cronet_UrlRequestParamsPtr,
        http_method: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_add(
        self_: Cronet_UrlRequestParamsPtr,
        element: Cronet_HttpHeaderPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_disable_cache_set(
        self_: Cronet_UrlRequestParamsPtr,
        disable_cache: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_priority_set(
        self_: Cronet_UrlRequestParamsPtr,
        priority: Cronet_UrlRequestParams_REQUEST_PRIORITY,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_set(
        self_: Cronet_UrlRequestParamsPtr,
        upload_data_provider: Cronet_UploadDataProviderPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        upload_data_provider_executor: Cronet_ExecutorPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_allow_direct_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        allow_direct_executor: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_add(
        self_: Cronet_UrlRequestParamsPtr,
        element: Cronet_RawDataPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_listener_set(
        self_: Cronet_UrlRequestParamsPtr,
        request_finished_listener: Cronet_RequestFinishedInfoListenerPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_executor_set(
        self_: Cronet_UrlRequestParamsPtr,
        request_finished_executor: Cronet_ExecutorPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_idempotency_set(
        self_: Cronet_UrlRequestParamsPtr,
        idempotency: Cronet_UrlRequestParams_IDEMPOTENCY,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_http_method_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_size(self_: Cronet_UrlRequestParamsPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_at(
        self_: Cronet_UrlRequestParamsPtr,
        index: u32,
    ) -> Cronet_HttpHeaderPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_headers_clear(self_: Cronet_UrlRequestParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_disable_cache_get(self_: Cronet_UrlRequestParamsPtr) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_priority_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_UrlRequestParams_REQUEST_PRIORITY;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_UploadDataProviderPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_upload_data_provider_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_ExecutorPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_allow_direct_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_size(self_: Cronet_UrlRequestParamsPtr) -> u32;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_at(
        self_: Cronet_UrlRequestParamsPtr,
        index: u32,
    ) -> Cronet_RawDataPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_annotations_clear(self_: Cronet_UrlRequestParamsPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_listener_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_RequestFinishedInfoListenerPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestParams_request_finished_executor_get(
        self_: Cronet_UrlRequestParamsPtr,
    ) -> Cronet_ExecutorPtr;
}
